dodano sekcje price plan -zarys ogolny + sekcje form - zarys ogolny

--- a/index.html
+++ b/index.html
@@ -68,19 +68,46 @@
             <div class="section-price__mainbox">
                 <div class="section-price__basic-plan">
                     <p>Basic plan</p>
-                    <div class="section-price__basic-plan--circleprice">
+                    <div class="section-price__circleprice">
                         <p>85<sup>99</sup></p>
                         <p>pln/mc</p>
                     </div>
                     <p>Zakup towaru + dowóz</p>
                     <p>Serwis</p>
-                    <div class="section-price__basic-plan--btn-box" >
+                    <div class="section-price__btn-box" >
                         <span>Dołącz</span>
                     </div>
                     
                 </div>
-                <div class="section-price__standard-plan"></div>
-                <div class="section-price__advance-plan"></div>
+                <div class="section-price__standard-plan">
+                    <p>standard plan</p>
+                    <div class="section-price__circleprice">
+                        <p>95<sup>99</sup></p>
+                        <p>pln/mc</p>
+                    </div>
+                    <p>Zakup towaru + dowóz</p>
+                    <p>Serwis</p>
+                    <p>gwarancja 5 lat</p>
+                   
+                    <div class="section-price__btn-box section-price__btn-box--standardPlan">
+                         <span>Dołącz</span>
+                    </div>
+                </div>
+
+                <div class="section-price__advance-plan">
+                    <p>advance plan</p>
+                    <div class="section-price__circleprice">
+                        <p>211<sup>00</sup></p>
+                        <p>pln/mc</p>
+                    </div>
+                    <p>Zakup towaru + dowóz</p>
+                    <p>Serwis</p>
+                    <p>gwarancja 6 lat</p>
+                    <p>Porady projektanta</p>
+                    <div class="section-price__btn-box">
+                        <span>Dołącz</span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -92,17 +119,34 @@
                     <form action="post" class="form-section__form--form">
                         <input type="text" placeholder="Imię">
                         <input type="email"placeholder="email">
-                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <textarea name="" id="" cols="30" rows="17"></textarea>
                     </form>
                 </div>
                 <div class="form-section__sendBox">
                     <img src="images/red_chair.png" alt="">
-                   <label for=""> <input type="radio">Zgadzam się na przetwarzanie danych osobowych</label>
+                   <div class="form-section__confirm">
+                       <img src="images/form_ok.jpg" alt="accept form">
+                       <p>Zgadzam się na przetwarzanie danych osobowych</p>
+                   </div>
                    <span class="form-section__sendBox--btn">Wyślij</span>
                 </div>
 
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container footer__box">
+            <div class="footer__copy-rights">Copyright 2014 | All rights reserved. - Sit on chair</div>
+            <div class="footer__icons-box">
+                <div class="footer__icons">
+                    <img src="images/flickr.png" alt="flickr logo">
+                    <img src="images/vimeo.png" alt="vimeo logo">
+                    <img src="images/pinterest.png" alt="printerest logo">
+                    <img src="images/twitter.png" alt="twitter logo">
+                </div>
+                <p>Sit <strong>on</strong> chair</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
