dodano kolka do sekcji price , dodano min height do sekcji price poprawiono paddingi tej sekcji

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <h2>Cennik</h2>
             <div class="section-price__mainbox">
                 <div class="section-price__basic-plan">
+                    <div class="section-price--circle">
+                        <div class="section-price--innerCircle"></div>
+                    </div>
                     <p>Basic plan</p>
                     <div class="section-price__circleprice">
                         <p>85<sup>99</sup></p>
@@ -80,6 +83,9 @@
                     
                 </div>
                 <div class="section-price__standard-plan">
+                    <div class="section-price--circle" id="greenCircle">
+                        <div class="section-price--innerCircle"></div>
+                    </div>
                     <p>standard plan</p>
                     <div class="section-price__circleprice">
                         <p>95<sup>99</sup></p>
@@ -95,6 +101,9 @@
                 </div>
 
                 <div class="section-price__advance-plan">
+                    <div class="section-price--circle">
+                        <div class="section-price--innerCircle" ></div>
+                    </div>
                     <p>advance plan</p>
                     <div class="section-price__circleprice">
                         <p>211<sup>00</sup></p>
@@ -119,11 +128,11 @@
                     <form action="post" class="form-section__form--form">
                         <input type="text" placeholder="Imię">
                         <input type="email"placeholder="email">
-                        <textarea name="" id="" cols="30" rows="17"></textarea>
+                        <textarea name="" id="" cols="30" rows="9" placeholder="Wiadomość"></textarea>
                     </form>
                 </div>
                 <div class="form-section__sendBox">
-                    <img src="images/red_chair.png" alt="">
+                    <img src="images/red_chair.png" alt="red chair" id="redChair">
                    <div class="form-section__confirm">
                        <img src="images/form_ok.jpg" alt="accept form">
                        <p>Zgadzam się na przetwarzanie danych osobowych</p>
