--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
             </div>
             <nav class="header__nav">
                 <ul>
-                    <li>O firmie</li>
+                    <li class="dropdown">O firmie
+                        <ul>
+                            <div></div>
+                            <li><a href="#">Aktualności</a></li>
+                            <li><a href="#">Nasz team</a></li>
+                            <li><a href="#">Historia</a></li>
+                        </ul>
+                    </li>
                     <li>Galeria</li>
                     <li>Kontakt</li>
                 </ul>
