dodano sass-rozdzielenie css na partials etc

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sit on chair</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     
 </head>
 <body>
