ukończono sekcję z kalkulatorem

--- a/index.html
+++ b/index.html
@@ -127,12 +127,11 @@
             </div>
         </div>
     </section>
-    <section class="application ">
+    <section class="application">
         <div class="main_width">
             <section class="choice_part inline">
                 <header>
                     <h3>SKOMPONUJ SWOJE KRZESŁO</h3>
-                    <span class="green_bell"></span>
                 </header>
     
                 <div class="form">
@@ -178,7 +177,6 @@
             <section class="summary_part inline">
                 <header class="align_right">
                     <h3>PODSUMOWANIE</h3>
-                    <span class="green_bell"></span>
                 </header>
     
                 <div class="summary_panel">
@@ -190,14 +188,14 @@
                         <span class="transport"></span>
                     </div>
                     <div class="panel_right">
-                        <h4 class="title value">zł</h4>
+                        <h4 class="title ">zł</h4>
                         <span class="pattern value"></span>
                         <span class="color value"></span>
                         <span class="material value"></span>
                         <span class="transport value"></span>
                     </div>
                     <div class="sum_label">SUMA</div>
-                    <div class="sum"><strong>result</strong></div>
+                    <div class="sum"><strong>0</strong> zł</div>
                 </div>
                 <a href="" class="green_button">Zamawiam</a>
             </section>
